--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2019.08.19.01
+﻿#2019.08.19.02
+-Kisebb javítások
+-BeinMatch arab feliratok lefordítva
+-LookMovie hozzáadva
+#2019.08.19.01
 -Seriale.co, Extraklasa TV javítva
 #2019.08.16.02
 -Sport 365 javítva
