--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.08.19.02
+﻿#2019.08.19.03
+-OK Goals, OurMatch, HooFoot javítva
+-Néhány további szolgáltató hibajavításai
+#2019.08.19.02
 -Kisebb javítások
 -BeinMatch arab feliratok lefordítva
 -LookMovie hozzáadva
