--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2019.08.24.01
+﻿#2019.08.24.02
+-BeinMatch fordítás bővítve
+#2019.08.24.01
 -Filmezz javítva
 #2019.08.23.02
 -HU Telepítő, MoziCsillag frissítve
