--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.09.02.01
+﻿#2019.09.04.01
+-HU telepítő frissítve
+-FilmGo hozzáadva
+#2019.09.02.01
 -Kisebb javítások
 -Ikonok frissítve
 #2019.09.01.01
