--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.09.06.03
+﻿#2019.09.07.01
+-Kisebb módosítások
+-Felnőtt kiegészítő frissítve
+#2019.09.06.03
 -CB01 hozzáadva (Olaszország)
 #2019.09.06.02
 -Adult TV, YouPorn Sexy javítva
