--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.09.07.01
+﻿#2019.09.08.01
+-DaftSex hozzáadva
+-Kisebb javítások
+#2019.09.07.01
 -Kisebb módosítások
 -Felnőtt kiegészítő frissítve
 #2019.09.06.03
