--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.09.11.01
+﻿#2019.09.11.02
+-HU telepítő frissítve
+-NonStop Mozi hozzáadva
+#2019.09.11.01
 -WebHU Player frissítve
 -FilmGo frissítve
 #2019.09.10.01
