--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.10.03.01
+﻿#2019.10.07.01
+-HU Telepítő frissítve
+-Auto.hu frissítve
+#2019.10.03.01
 -HD Filme javítva
 -Rai Play EPG forrás frissítve
 #2019.09.30.01
