--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.10.12.01
+﻿#2019.10.13.01
+-NetFlix Horror Series javítva (TSiPlayer)
+-Beeg javítva (XXX)
+#2019.10.12.01
 -FilmeHD.se javítva
 -RaiPlay frissítve
 #2019.10.07.02
