HooFoot, OurMatch javítva, USTV Go frissítve

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2019.10.18.01
+﻿#2019.10.18.02
+-HooFoot javítva
+-OurMatch javítva
+-USTV Go frissítve
+#2019.10.18.01
 -Felnőtt kiegészítő frissítve
 #2019.10.14.02
 -PinFlix javítva (XXX)
