Twitch TV, HooFoot javítva

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.10.27.01
+﻿#2019.10.29.01
+-Twitch TV javítva
+-HooFoot javítva
+#2019.10.27.01
 -Miami TV javítva
 #2019.10.25.01
 -Felnőtt kiegészítő frissítve
