--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2019.10.29.01
+﻿#2019.10.29.02
+-LoveHomePorn hozzáadva (XXX)
+#2019.10.29.01
 -Twitch TV javítva
 -HooFoot javítva
 #2019.10.27.01
