--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2019.11.04.01
+﻿#2019.11.04.02
+-Amateur Cool hozzáadva (XXX)
+#2019.11.04.01
 -Felnőtt kiegészítő frissítve
 #2019.10.29.02
 -LoveHomePorn hozzáadva (XXX)
