--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.11.04.03
+﻿#2019.11.10.01
+-Auto.HU frissítve
+-Felnőtt kiegészítő hibái javítva
+#2019.11.04.03
 -RaiPlay, Clipwatching javítva
 #2019.11.04.02
 -Amateur Cool hozzáadva (XXX)
