--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2019.11.10.01
+﻿#2019.11.10.02
+-123Movies javítva
+-EuroSport Player módosítva
+-RaiPlay, USTVGo, EgyBest frissítve.
+#2019.11.10.01
 -Auto.HU frissítve
 -Felnőtt kiegészítő hibái javítva
 #2019.11.04.03
