--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.11.10.02
+﻿#2019.11.15.01
+-AnyBunny, YesPornPlease hozzáadva (XXX)
+-LetMeJerk javítva (XXX)
+#2019.11.10.02
 -123Movies javítva
 -EuroSport Player módosítva
 -RaiPlay, USTVGo, EgyBest frissítve.
