FilmOWood hozzáadva, SolarMovie javítva

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.11.15.01
+﻿#2019.11.15.02
+-FilmOWood hozzáadva
+-SolarMovie javítva
+#2019.11.15.01
 -AnyBunny, YesPornPlease hozzáadva (XXX)
 -LetMeJerk javítva (XXX)
 #2019.11.10.02
