--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2019.11.17.01
+﻿#2019.11.18.01
+-Felnőtt kiegészítő frissítve
+#2019.11.17.01
 -Twitch TV javítva
 #2019.11.15.03
 -FullMatchTV hozzáadva
