HQ Porner, DatoPorn hozzáadva (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.11.23.02
+﻿#2019.11.24.01
+-HQ Porner hozzáadva (XXX)
+-DatoPorn hozzáadva (XXX)
+#2019.11.23.02
 -FullMatch TV javítva
 -eFilmy javítva
 -FilmAtiva javítva
