TVP VOD javítva (Belépés)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2019.11.24.01
+﻿#2019.11.25.01
+-TVP VOD javítva (Belépés)
+#2019.11.24.01
 -HQ Porner hozzáadva (XXX)
 -DatoPorn hozzáadva (XXX)
 #2019.11.23.02
