--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.11.25.01
+﻿#2019.11.26.01
+-SolarMovie javítva
+-YMovies.to javítva
+#2019.11.25.01
 -TVP VOD javítva (Belépés)
 #2019.11.24.01
 -HQ Porner hozzáadva (XXX)
