--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2019.12.06.01
+﻿#2019.12.08.01
+-DatoPorn javítva (XXX)
+-EroProfile javítva (XXX)
+#2019.12.06.01
 -BongaCams javítva (XXX)
 -MyFree MP3 javítva
 #2019.12.05.01
