--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,9 @@
-﻿#2019.12.14.01
+﻿#2019.12.15.01
+-WebHU Player Időjárás megjelenítés hozzáadva (Teszt)
+-USTV Go javítva
+-TVP VOD javítva
+-Kisebb módosítások
+#2019.12.14.01
 -TSiPlayer frissítve
 -PornRewind javítva (XXX)
 #2019.12.13.01
