--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2019.12.16.01
+﻿#2019.12.17.01
+-CDA Filmy hozzáadva (Lengyel)
+#2019.12.16.01
 -SpankBang hozzáadva (XXX)
 -ProStream és UpStream tárhelyek támogatása hozzáadva (XXX)
 #2019.12.15.01
