Videa.hu, InfoVersion frissítve, Chaturbate javítva (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2019.12.17.01
+﻿#2019.12.18.01
+-Videa.hu frissítve
+-Chaturbate javítva (XXX)
+-InfoVersion frissítve
+#2019.12.17.01
 -CDA Filmy hozzáadva (Lengyel)
 #2019.12.16.01
 -SpankBang hozzáadva (XXX)
