--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,9 @@
-﻿#2019.12.18.01
+﻿#2019.12.19.01
+-Filmezz.hu frissítve
+-MoziCsiilag frissítve
+-FilmGo frissítve
+-NonStopMozi frissítve
+#2019.12.18.01
 -Videa.hu frissítve
 -Chaturbate javítva (XXX)
 -InfoVersion frissítve
