--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,9 @@
-﻿#2019.12.19.02
+﻿#2020.01.03.01
+-Technika.hu hozzáadva
+-HU telepítő frissítve
+-Felnőtt kiegészítő frissítve
+-Kisebb módosítások
+#2019.12.19.02
 -WebHU Player frissítve
 #2019.12.19.01
 -Filmezz.hu frissítve
