--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,10 @@
-﻿#2020.01.03.01
+﻿#2020.01.03.02
+-3Filmy hozzáadva
+-NHL66.ir hozzáadva
+-MediaSetPlay EPG javítva
+-AllTube javítva
+-Kisebb javítások
+#2020.01.03.01
 -Technika.hu hozzáadva
 -HU telepítő frissítve
 -Felnőtt kiegészítő frissítve
