--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2020.01.06.01
+﻿#2020.01.08.01
+-PorniCom javítva (XXX)
+-WoxTube hozzáadva (XXX)
+-WatchPornX hozzáadva (XXX)
+#2020.01.06.01
 -CrocoTube javítva (XXX)
 #2020.01.05.01
 -Kisebb javítások
