--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2020.01.08.01
+﻿#2020.01.12.01
+-Twitch TV javítva (Keresési eredmények)
+-eKino javítva
+-PornRabbit javítva (XXX)
+#2020.01.08.01
 -PorniCom javítva (XXX)
 -WoxTube hozzáadva (XXX)
 -WatchPornX hozzáadva (XXX)
