Technika.HU, TSiPlayer frissítve

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2020.01.14.02
+﻿#2020.01.16.01
+-Technika.HU frissítve
+-TSiPlayer frissítve
+#2020.01.14.02
 -Technika.HU frissítve
 #2020.01.14.01
 -InfoVersion frissítve
