YouPorn javítva (XXX), RedBull TV javítva, Kisebb módosítások

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2020.01.25.01
+﻿#2020.01.26.01
+-YouPorn javítva (XXX)
+-RedBull TV javítva
+-Kisebb módosítások
+#2020.01.25.01
 -YouTube javítva
 -Felnőtt kiegészítő frissítve
 #2020.01.19.01
