--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2020.02.05.01
+﻿#2020.02.09.01
+-InfoVersion javítva
+-Kisebb módosítások
+#2020.02.05.01
 -Felnőtt kiegészítő frissítve
 #2020.02.02.02
 -TVN24 javítva 
