--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2020.02.09.01
+﻿#2020.02.14.01
+-Felnőtt kiegészítő frissítve
+#2020.02.09.01
 -InfoVersion javítva
 -Kisebb módosítások
 #2020.02.05.01
