PornoPersik hozzáadva (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2020.02.22.01
+﻿#2020.02.23.01
+-PornoPersik hozzáadva (XXX)
+#2020.02.22.01
 -HClips javítva (XXX)
 -EPorner javítva (XXX)
 #2020.02.16.01
