Update to version 2020.02.26.01
-Twitch TV javítva
-PornDoe javítva (XXX)
-RusPorn javítva (XXX)
-Watch-Movies hozzáadva (PL)
-EKinoManiak hozzáadva (PL)
-Kisebb javítvások

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,11 @@
-﻿#2020.02.23.01
+﻿#2020.02.26.01
+-Twitch TV javítva
+-PornDoe javítva (XXX)
+-RusPorn javítva (XXX)
+-Watch-Movies hozzáadva (PL)
+-EKinoManiak hozzáadva (PL)
+-Kisebb javítvások
+#2020.02.23.01
 -PornoPersik hozzáadva (XXX)
 #2020.02.22.01
 -HClips javítva (XXX)
