Update to version 2020.02.26.02
-USTVGo javítva
-VidCorn javítva
-Twitch TV javítva (Lapozás)
-Xhamster javítva (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,9 @@
-﻿#2020.02.26.01
+﻿#2020.02.26.02
+-USTVGo javítva
+-VidCorn javítva
+-Twitch TV javítva (Lapozás)
+-Xhamster javítva (XXX)
+#2020.02.26.01
 -Twitch TV javítva
 -PornDoe javítva (XXX)
 -RusPorn javítva (XXX)
