--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-﻿#2020.03.05.01
+﻿#2020.03.06.01
+LetMeJerk javítva (XXX)
+#2020.03.05.01
 -HQPorner javítva (XXX)
 #2020.03.02.01
 -Kisebb javítások
