PornHD, PlayVids javítva (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2020.03.06.01
+﻿#2020.03.08.01
+-PornHD javítva (XXX)
+-PlayVids javítva (XXX)
+#2020.03.06.01
 LetMeJerk javítva (XXX)
 #2020.03.05.01
 -HQPorner javítva (XXX)
