--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-﻿#2020.03.09.01
+﻿#2020.03.11.01
+-EKino javítva
+-USTVGo javítva
+#2020.03.09.01
 -Kisebb javítások
 #2020.03.08.01
 -PornHD javítva (XXX)
