WatchCartoonOnline javítva, AnyPorn hozzáadva (XXX), BongaCams javítva (XXX)
Köszönet: Alec, Codermik

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2020.03.11.01
+﻿#2020.03.15.01
+-WatchCartoonOnline javítva (Köszönet: Alec és Codermik)
+-AnyPorn hozzáadva (XXX)
+-BongaCams javítva (XXX)
+#2020.03.11.01
 -EKino javítva
 -USTVGo javítva
 #2020.03.09.01
