EPorner javítva; BravoPorn, BravoTeens hozzáadva (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2020.03.16.01
+﻿#2020.03.21.01
+-EPorner javítva (XXX)
+-BravoPorn hozzáadva (XXX)
+-BravoTeens hozzáadva (XXX)
+#2020.03.16.01
 -USTVGo funkcionális bővítések
 -Anon-V hozzáadva (XXX)
 #2020.03.15.02
