--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
-﻿#2020.03.21.01
+﻿#2020.03.23.01
+-VUP.to tárhely kezelése hozzáadva
+-EKino javítva (Keresés)
+-ASheMaleTube javítva (XXX)
+#2020.03.21.01
 -EPorner javítva (XXX)
 -BravoPorn hozzáadva (XXX)
 -BravoTeens hozzáadva (XXX)
