PornHub javítva (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2020.04.01.01
+-PornHub javítva (XXX)
+-Kisebb módosítások
 #2020.03.29.01
 -MindiGo frissítve (Köszönet Celeburdinak!)
 -Kisebb javítások
