--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2020.04.03.01
+-MindiGo frissítve (Köszönet Celeburdinak!)
+-WatchMovies javítva
+-Kisebb módosítások
 #2020.04.01.01
 -PornHub javítva (XXX)
 -Kisebb módosítások
