--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,9 @@
+#2020.05.05.01
+-JavHoHo hozzáadva (XXX)
+-CinemaLibero hozzáadva (Italian)
+-Puzzle Captcha támogatás integrálva
+-GuardaSerie javítva
+-Kisebb módosítások
 #2020.05.01.01
 -YouPorn Sexy javítva (XXX)
 -VJav hozzáadva (XXX)
