LosMovies, TantiFilm, EkstraKlasa Tv javítva

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2020.06.08.01
+-LosMovies, TantiFilm, EkstraKlasa javítva
+-Kisebb módosítások
 #2020.06.06.01
 -AnyBunny javítva (XXX)
 #2020.06.03.01
