Kisebb javítások, Nyelvi fájlok frissítve

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2020.06.27.01
+-Kisebb javítások
+-Nyelvi fájlok frissítve
 #2020.06.26.01
 HomeMoviesTube, BongaCams javítva (XXX)
 #2020.06.24.01
