--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,9 @@
+#2020.07.01.01
+-CDAFilmy javítva (POL)
+#2020.06.30.01
+-Porn00, Beeg javítva (XXX)
+-ABCVideo támogatás hozzáadva
+-Kisebb javítások 
 #2020.06.27.01
 -Kisebb javítások
 -Nyelvi fájlok frissítve
