--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2020.07.06.01 
+-Youtube részben javítva (Kereső, Webp > JPEG konverzió)
+-RaiPlay javítva (ITA)
+-SpankBang javítva (XXX)
 #2020.07.05.01 
 -PornTRex javítva (XXX)
 #2020.07.04.01
