--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,8 @@
 #2020.07.13.01
+-AllTube javítva (Kereső)
+-Camster javítva (XXX)
+-Kisebb fejlesztések
+#2020.07.13.01
 -Cartoon HD javítva
 -Nem működő hostok eltávolítva
 #2020.07.12.01
