--- a/changes.txt
+++ b/changes.txt
@@ -1,3 +1,10 @@
+#2020.07.23.01
+-YouTube kereső javítva
+#2020.07.21.01
+-FilMoviPlex hozzáadva
+-Kisebb javítások
+#2020.07.20.02
+-PornRabbit javítva
 #2020.07.20.01
 -FilmAtiva javítva
 #2020.07.19.02
