USTVGo javítva, InfoVersion frissítve, Kisebb módosítások

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2020.08.01.01
+-InfoVersion frissítve
+-USTVGo javítva
+-Kisebb módosítások
 #2020.07.29.01
 -Mecz Replay hozzáadva (POL- InfoVersion)
 #2020.07.28.01
