BitPorno, EBuXXX hozzáadva, HDFull javítva

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2020.08.03.01
+-BitPorno, EBuXXX hozzáadva
+-HDFull javítva
 #2020.08.02.01
 -Magyarítás frissítve (Köszönet Alec-nek)
 -DailyMotion javítva
