--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2020.08.14.01
+-Vidoza.Co tárhely támogatás hozzáadva
 #2020.08.12.01
 -DixMax frissítve (Saját lista támogatása)
 -YMovies javítva
