--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2020.09.09.02
+-YouTube javítva, Magyarítás frissítve (Alec)
 #2020.09.09.01
 -GoVod.TV hozzáadva, Kisebb módosítások
 #2020.09.07.01
