--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,5 +1,5 @@
-#2020.09.11.01
--YouTube javítva (2)
+#2020.09.13.01
+-YouTube további javítások
 #2020.09.09.02
 -YouTube javítva, Magyarítás frissítve (Alec)
 #2020.09.09.01
