--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2020.11.03.01
+-Ikonok, markerek frissítve
+-Movs4U, RedBull TV, GreekDocumentaries javítva
 #2020.11.02.01
 -Youtube aláírás visszafejtési hiba javítva
 -Kisebb módosítások (Setup)
