--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2020.12.13.01
+-Lejátszó kinézetének fejlesztése
 #2020.12.12.02
 -LiveSpotting, VideoStar, WebCamera.pl javítva (WebStream)
 -Ikonok frissítve
