--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2020.12.31.01
+-Arte.TV részben javítva, HD Full javítva
+#2020.12.29.01
+-Lejátszók frissítése, integrálása
 #2020.12.27.01
 -Kisebb javítások
 #2020.12.25.01
