--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2021.01.06.01
+-EKinoManiak javítva (PL)
+-Crakstream részben javítva (Webstream)
 #2021.01.05.01
 -FilmAn hozzáadva (PL)
 #2021.01.04.01
