--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2021.01.26.01
+-MindiGo ikonok frissítve
+-VizjerPL hozzáadva
+-Kisebb javítások
 #2021.01.24.01
 -Kisebb javítások
 #2021.01.21.01
