--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,8 @@
+#2021.03.12.01
+-Kisebb javítások (Tárhelytámogatás)
+#2021.03.08.01
+-Nem működő hostok törölve
+-Javítások, frissítések
 #2021.03.01.01
 -Kisebb javítások
 #2021.02.27.01
