--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2021.04.02.01
+-Megszűnt szolgáltatók törölve
 #2021.03.30.01
 -GamatoCom, GoWatchSeries javítva
 -Tárhelytámogatás bővítve (GosFD.eu)
