--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,6 @@
-#2021.04.08.01
+#2021.04.10.01
+Javítások, frissítések
+#2021.04.07.01
 -Userload.co tárhelytámogatás hozzáadva
 #2021.04.05.01
 -Kisebb javítások
