--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2021.07.08.01
+-Kisebb javítások (NonStopMozi)
+-Tárhelytámogatás frissítve
 #2021.07.06.01
 -DMDAMedia - Kereső hozzáadva (1.1)
 #2021.07.02.01
