--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2021.07.19.01
+-DMDAMedia frissítve (Feliratos filmek támogatása)
+-Kisebb javítások
 #2021.07.14.01
 -Kisebb javítások
 #2021.07.08.01
