--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2021.08.10.01
+-SonyPlayer törölve
+-YouTube Multistream támogatás javítva
 #2021.08.08.01
 -YouTube kereső javítva
 #2021.08.06.01
