--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,4 +1,7 @@
-#2021.08.16.01
+#2021.08.21.01
+-SkyLineWebcams javítva (Webstream)
+#2021.08.19.01
+-Kisebb javítások
 -YouTube: Csatorna, lejátszási lista és élő adás keresése javítva
 #2021.08.15.01
 -YouTube keresési eredmények rendezése javítva
