--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2021.08.22.01
+-FilmVilág2 hozzáadva (Béta - A kereső még nem működik!)
 #2021.08.21.02
 -Tárhelytámogatás frissítve
 #2021.08.21.01
