--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2021.09.21.01
+-DMDAMedia javítva
+#2021.09.19.02
+-Kisebb javítások
 #2021.09.19.01
 -StreamSB tárhelytámogatás javítva
 #2021.09.18.01
