--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,6 +1,8 @@
+#2021.10.24.01
+-YouTube lejátszási hiba javítva
 #2021.10.23.01
--Fixed parser for Dood
--Some User Agents Updated
+-Dood tárhelytámogatás javítva
+-Kisebb frissítések
 #2021.10.19.01
 -Kisebb javítások
 -TSiPlayer frissítve
