--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.01.11.01
+-Youtube: Keresési előzmények számának kijelzése
+-FilmPalast javítva (GER)
 #2022.01.08.01
 -Keresési előzmények törlése hozzáadva a Youtube-hoz
 #2022.01.07.01
