--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2022.03.04.01
+-Orosz hostok törölve, Kisebb javítások
 #2022.02.24.01
 -DMDAMedia Kereső és Friss mappa javítva (HU)
 #2022.02.21.01
