--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,6 +1,9 @@
+#2022.04.11.01
+-OnlineStream frissítve (1.2)
+-Kisebb javítások
 #2022.04.10.01
 -OnlineStream frissítve (Műsorinformáció megjelenítése,
-                         MJPEG formátum támogatása).
+              MJPEG formátum támogatása).
 #2022.04.03.01
 -OnlineStream.Live hozzáadva (Béta)
 #2022.03.27.01
