--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2022.04.15.01
+-Új Host: StreamStat hozzáadva (International IPTV)
 #2022.04.11.01
 -OnlineStream frissítve (1.2)
 -Kisebb javítások
