Fixes for BalkanJizz, BitPorno, Thumbzilla (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2022.04.19.01
+-BalkanJizz, BitPorno, Thumbzilla javítva (XXX)
 #2022.04.15.01
 -Új Host: StreamStat hozzáadva (International IPTV)
 #2022.04.11.01
