--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2022.04.21.01
+-PornRabbit, PornOne, EPorner javítva (XXX)
 #2022.04.19.01
 -BalkanJizz, BitPorno, Thumbzilla javítva (XXX)
 #2022.04.15.01
