Fixed YouPorn , RedTube (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,6 +1,8 @@
+#2022.04.28.01
+-YouPorn, Redtube javítva (XXX)
 #2022.04.23.01
 -Vidnode, ServerHD javítva (GoWatchSeries)
--RedTube, Xhamster javítva (XXX)
+-Xhamster javítva (XXX)
 #2022.04.21.01
 -PornRabbit, PornOne, EPorner javítva (XXX)
 #2022.04.19.01
