--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.05.07.01
+-EbuXXX, PinFlix, PornHD javítva (XXX).
+-Evoload.io tárhelytámogatás javítva.
 #2022.05.04.01
 -LoveHomePorn, PandaMovie, NetFlixPorno javítva.
 #2022.04.28.01
