--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2022.05.08.01
+-DatoPorn, StreamPorn, PornoRussia javítva (XXX).
 #2022.05.07.01
 -EbuXXX, PinFlix, PornHD javítva (XXX).
 -Evoload.io tárhelytámogatás javítva.
