--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.05.11.01
+-Filmvilág 2 Tartalom-megjelenítés javítva.
+-MyDirtyHobby javítva (XXX).
 #2022.05.10.01
 -MyTheWatchSeries frissítve.
 #2022.05.09.01
