Added New Hosts: PornHat, Motherless (XXX), Some small fixes.

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.05.17.01
+-Új oldalak: Motherless és PornHat hozzáadva (XXX)
+-Kisebb javítások
 #2022.05.16.01
 -SpankBang javítva (XXX).
 -Filmvilág 2 frissítve.
