Added new host: BlueWatchSeries, Fixed PornoPersik, Added PornDroids (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,10 @@
+#2022.05.21.01
+-BlueWatchSeries hozzáadva (https://www.watchseries.cyou)
+-PornoPersik javítva (XXX)
+-PornDroids hozzáadva (XXX)
+#2022.05.19.01
+-Spankbang, MovieFap javítva (XXX)
+-Új oldalak: PerfectGirls és Porn300 hozzáadva (XXX)
 #2022.05.17.01
 -Új oldalak: Motherless és PornHat hozzáadva (XXX)
 -Kisebb javítások
