--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2022.05.30.01
+-Javítások, bővítések
+-DMDAMedia frissítve (2.0)
+-XBabe hozzáadva (XXX)
 #2022.05.21.01
 -BlueWatchSeries hozzáadva (https://www.watchseries.cyou)
 -PornoPersik javítva (XXX)
