--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.06.06.01
+-XXX Kiegészítő frissítve
+-Kisebb javítások
 #2022.05.30.01
 -Javítások, bővítések
 -DMDAMedia frissítve (2.0)
@@ -21,7 +24,7 @@
 #2022.05.10.01
 -MyTheWatchSeries frissítve.
 #2022.05.09.01
-WatchPornX, Rus.Porn javítva (XXX).
+-WatchPornX, Rus.Porn javítva (XXX).
 #2022.05.08.01
 -DatoPorn, StreamPorn, PornoRussia javítva (XXX).
 #2022.05.07.01
