--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,15 @@
+#2022.07.10.01
+-CB01 javítva
+#2022.07.06.01
+-FreeOnes hozzáadva (XXX)
+#2022.07.04.01
+-HomePornKing hozzáadva (XXX)
+#2022.07.02.01
+-GlavMatures hozzáadva (XXX)
+#2022.07.01.01
+-FilmTár hozzáadva (Béta)
+#2022.06.29.01
+-AnyBunny, MyDirtyHobby javítva (XXX)
 #2022.06.20.01
 -XXX Kiegészítő frissítve: DansMovies hozzádva
 #2022.06.16.01
