Fixed MindiGo , OnlineStream(HUN), and WatchPornX (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2022.07.15.01
+-OnlineStream javítva
+-MindiGo javítva (M3)
+-WatchPornX javítva (XXX)
 #2022.07.10.01
 -CB01 javítva
 #2022.07.06.01
