--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.07.26.01
+-HQPorner javítva, YourPorn részben javítva (XXX)
+-WatchMyGf, SexVid hozzáadva (XXX)
 #2022.07.15.01
 -OnlineStream javítva
 -MindiGo javítva (M3)
