Update XXX host, Small Fixes (cb01.uno, MindiGo)
Thanks to Panda555

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.07.31.01
+-HDPorno, Motherless javítva (XXX)
+-Kisebb javítások (MindiGo - HUN, CB01.UNO - ITA) 
 #2022.07.26.01
 -HQPorner javítva, YourPorn részben javítva (XXX)
 -WatchMyGf, SexVid hozzáadva (XXX)
