Added new host: Időkép (HU)
Hungarian and International Weather Informations, Webcams.

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.08.09.01
+-Új host: Időkép hozzáadva (HUN),
+-Kisebb módosítások
 #2022.07.31.01
 -HDPorno, Motherless javítva (XXX)
 -Kisebb javítások (MindiGo - HUN, CB01.UNO - ITA) 
