--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,8 @@
+#2022.08.21.01
+-XXX Kiegészítő frissítve
+-Időkép javítva
+-TantiFilm javítva (ITA)
+-LosMovies, GoWatchSeries javítva
 #2022.08.09.01
 -Új host: Időkép hozzáadva (HUN),
 -Kisebb módosítások
