--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2022.09.19.01
+-XXX kiegészítő frissítve  (Új host: FullPorner)
 #2022.09.04.01
 -Filmezz frissítve (3.0)
 -WebHuPlayer frissítve (4.0)
