--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2022.09.28.02
+-HU Telepítő, Filmezz, FilmVilág2 javítva
+#2022.09.28.01
+-XXX kiegészítő frissítve (Love Home Porn javítva)
 #2022.09.19.01
 -XXX kiegészítő frissítve  (Új host: FullPorner)
 #2022.09.04.01
