--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2022.10.01.01
+-XXX kiegészítő frissítve (Új Host: MyMilfPorn)
 #2022.09.28.02
 -HU Telepítő, Filmezz, FilmVilág2 javítva
 #2022.09.28.01
