Fixed Filmezz (HU) and Fixed PornOne (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,8 @@
+#2022.10.27.01
+-Filmezz javítva
+-PornOne javítva (XXX)
+#2022.10.23.01
+-PornHeed hozzáadva (XXX)
 #2022.10.18.01
 -e2iPlayer Widget frissítve
 #2022.10.16.01
