Added TV2Play (HU), Fixed MotherPorno (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2022.11.03.01
+-TV2 Play hozzáadva (Beta)
+-MotherPorno javítva (Új név: MomVids)
 #2022.10.27.01
 -Filmezz javítva
 -PornOne javítva (XXX)
