--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2022.11.20.01
+-Wankoz, PornWhite hozzáadva (XXX)
+-Képek megjelenítése javítva (XXX)
+-Kisebb javítások (ITA)
 #2022.11.10.01
 -YouTube javítva
 #2022.11.08.01
