--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,7 @@
+#2023.02.14.01
+-FilmPapa javítva
+-NonStopMozi részben javítva
+-Frissítések
 #2023.01.18.01
 -GoWatchSeries javítva
 #2023.01.17.01
