--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,6 @@
+#2023.03.19.02
+-YouTube Élő Adások támogatása javítva
+-YouTube MultiStream közvetítések támogatása javítva
 #2023.03.19.01
 -Kisebb javítások
 #2023.03.18.01
