--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2023.03.26.01
+-Voe.SX tárhelytámogatás javítva
 #2023.03.19.02
 -YouTube Élő Adások támogatása javítva
 -YouTube MultiStream közvetítések támogatása javítva
