Fixed FilmVilág2 (HU) and PornWhite, PornRewind, RedTube (XXX)

--- a/IPTVPlayer/changes.txt
+++ b/IPTVPlayer/changes.txt
@@ -1,3 +1,5 @@
+#2023.11.26.01
+-FilmVilág2, illetve PornWhite, PornRewind, RedTube javítva (XXX)
 #2023.11.18.01
 -HU Telepítő javítva
 #2023.11.13.01
